--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,.7);
     top: 0;
     left: 0;
     z-index: 999999;
@@ -104,7 +104,7 @@ body {
     transition: all 0.8s ease 0s;
     opacity: 0;
     transform: perspective(600px) translate(0px, -100px) rotateX(45deg);
-    border: 5px solid #e3c580;
+    border: 5px solid #ff9801;
 }
 .form__group{
     display: flex;
@@ -225,11 +225,11 @@ input[type="radio"]:checked+label:after {
     font-weight: 700;
 }
 .question__btn{
-    min-width: 250px;
-    max-width: 250px;
+    min-width: 200px;
+    max-width: 200px;
     height: 60px;
-    background-color: #2d3f50;
-    font-size: 24px;
+    background-color: #ff9801;
+    font-size: 20px;
     line-height: 36px;
     color: #fff;
     display: flex;
@@ -239,8 +239,9 @@ input[type="radio"]:checked+label:after {
     padding: 0 59px;
     cursor: pointer;
 }
-.question__btn:first-child{
-    margin-right: 30px;
+.question__btn_back{
+    background-color: transparent;
+    color: black;
 }
 .popup__img_absolute{
     position: absolute;
@@ -272,6 +273,7 @@ input[type="radio"]:checked+label:after {
     color: #fff !important;
     padding-left: 15px;
     padding-right: 15px;
+    border-radius: 10px;
 }
 .form__group__box__items_viber{
     background-color: #aa6482; 
@@ -299,16 +301,12 @@ input[type="radio"]:checked+label:after {
     border: none;
     border-bottom: 1px solid #cccccc;
     text-align: center;
-    font-size: 48px;
+    font-size: 30px;
     line-height: 36px;
-    font-weight: 700;
-    padding-bottom: 65px;
+    padding-bottom: 10px;
 }
 .popup__input:focus{
     outline: none;
-}
-.popup__input:last-child{
-    padding-bottom: 0;
 }
 .form__group__error {
     color: #008000;
@@ -332,6 +330,12 @@ input[type="radio"]:checked+label:after {
 }
 .question__btn_10{
     max-width: 100%;
+}
+input::-moz-placeholder{
+    color: rgb(190, 190, 190);
+}
+input::-webkit-input-placeholder{
+    color: rgb(190, 190, 190); 
 }
 @media(max-width: 767px){
     .popup__items:first-child{
